--- a/app/src/main/res/layout/edit_layout.xml
+++ b/app/src/main/res/layout/edit_layout.xml
@@ -27,6 +27,12 @@
             android:layout_height="wrap_content"
             android:text="Undo"/>
 
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"/>
+
         </LinearLayout>
 
     <LinearLayout
